--- a/docs/release-notes/v1.31.X.md
+++ b/docs/release-notes/v1.31.X.md
@@ -11,6 +11,7 @@ Before upgrading from earlier releases, be sure to read the Kubernetes [Urgent U
 
 | Version | Release date | Kubernetes | Kine | SQLite | Etcd | Containerd | Runc | Flannel | Metrics-server | Traefik | CoreDNS | Helm-controller | Local-path-provisioner  |
 | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | -----  |
+| [v1.31.8+k3s1](v1.31.X.md#release-v1318k3s1) | May 01 2025| [v1.31.8](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.31.md#v1318) | [v0.13.14](https://github.com/k3s-io/kine/releases/tag/v0.13.14) | [3.46.1](https://sqlite.org/releaselog/3_46_1.html) | [v3.5.21-k3s1](https://github.com/k3s-io/etcd/releases/tag/v3.5.21-k3s1) | [v2.0.4-k3s2](https://github.com/k3s-io/containerd/releases/tag/v2.0.4-k3s2) | [v1.2.5](https://github.com/opencontainers/runc/releases/tag/v1.2.5) | [v0.26.7](https://github.com/flannel-io/flannel/releases/tag/v0.26.7) | [v0.7.2](https://github.com/kubernetes-sigs/metrics-server/releases/tag/v0.7.2) | [v2.11.24](https://github.com/traefik/traefik/releases/tag/v2.11.24) | [v1.12.1](https://github.com/coredns/coredns/releases/tag/v1.12.1) | [v0.16.10](https://github.com/k3s-io/helm-controller/releases/tag/v0.16.10) | [v0.0.31](https://github.com/rancher/local-path-provisioner/releases/tag/v0.0.31)  |
 | [v1.31.7+k3s1](v1.31.X.md#release-v1317k3s1) | Mar 25 2025| [v1.31.7](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.31.md#v1317) | [v0.13.9](https://github.com/k3s-io/kine/releases/tag/v0.13.9) | [3.46.1](https://sqlite.org/releaselog/3_46_1.html) | [v3.5.19-k3s1.30](https://github.com/k3s-io/etcd/releases/tag/v3.5.19-k3s1.30) | [v2.0.4-k3s2](https://github.com/k3s-io/containerd/releases/tag/v2.0.4-k3s2) | [v1.2.5](https://github.com/opencontainers/runc/releases/tag/v1.2.5) | [v0.25.7](https://github.com/flannel-io/flannel/releases/tag/v0.25.7) | [v0.7.2](https://github.com/kubernetes-sigs/metrics-server/releases/tag/v0.7.2) | [v2.11.20](https://github.com/traefik/traefik/releases/tag/v2.11.20) | [v1.12.0](https://github.com/coredns/coredns/releases/tag/v1.12.0) | [v0.16.6](https://github.com/k3s-io/helm-controller/releases/tag/v0.16.6) | [v0.0.31](https://github.com/rancher/local-path-provisioner/releases/tag/v0.0.31)  |
 | [v1.31.6+k3s1](v1.31.X.md#release-v1316k3s1) | Feb 27 2025| [v1.31.6](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.31.md#v1316) | [v0.13.9](https://github.com/k3s-io/kine/releases/tag/v0.13.9) | [3.46.1](https://sqlite.org/releaselog/3_46_1.html) | [v3.5.18-k3s1](https://github.com/k3s-io/etcd/releases/tag/v3.5.18-k3s1) | [v2.0.2-k3s2](https://github.com/k3s-io/containerd/releases/tag/v2.0.2-k3s2) | [v1.2.4-k3s2](https://github.com/opencontainers/runc/releases/tag/v1.2.4-k3s2) | [v0.25.7](https://github.com/flannel-io/flannel/releases/tag/v0.25.7) | [v0.7.2](https://github.com/kubernetes-sigs/metrics-server/releases/tag/v0.7.2) | [v2.11.20](https://github.com/traefik/traefik/releases/tag/v2.11.20) | [v1.12.0](https://github.com/coredns/coredns/releases/tag/v1.12.0) | [v0.16.6](https://github.com/k3s-io/helm-controller/releases/tag/v0.16.6) | [v0.0.31](https://github.com/rancher/local-path-provisioner/releases/tag/v0.0.31)  |
 | [v1.31.5+k3s1](v1.31.X.md#release-v1315k3s1) | Jan 28 2025| [v1.31.5](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.31.md#v1315) | [v0.13.5](https://github.com/k3s-io/kine/releases/tag/v0.13.5) | [3.46.1](https://sqlite.org/releaselog/3_46_1.html) | [v3.5.16-k3s1](https://github.com/k3s-io/etcd/releases/tag/v3.5.16-k3s1) | [v1.7.23-k3s2](https://github.com/k3s-io/containerd/releases/tag/v1.7.23-k3s2) | [v1.2.4-k3s1](https://github.com/opencontainers/runc/releases/tag/v1.2.4-k3s1) | [v0.25.7](https://github.com/flannel-io/flannel/releases/tag/v0.25.7) | [v0.7.2](https://github.com/kubernetes-sigs/metrics-server/releases/tag/v0.7.2) | [v2.11.18](https://github.com/traefik/traefik/releases/tag/v2.11.18) | [v1.12.0](https://github.com/coredns/coredns/releases/tag/v1.12.0) | [v0.16.5](https://github.com/k3s-io/helm-controller/releases/tag/v0.16.5) | [v0.0.30](https://github.com/rancher/local-path-provisioner/releases/tag/v0.0.30)  |
@@ -22,6 +23,31 @@ Before upgrading from earlier releases, be sure to read the Kubernetes [Urgent U
 
 <br />
 
+## Release [v1.31.8+k3s1](https://github.com/k3s-io/k3s/releases/tag/v1.31.8+k3s1)
+<!-- v1.31.8+k3s1 -->
+
+This release updates Kubernetes to v1.31.8, and fixes a number of issues.
+
+For more details on what's new, see the [Kubernetes release notes](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.31.md#changelog-since-v1317).
+
+### Changes since v1.31.7+k3s1:
+
+* Migrate to UrfaveCLI v2 [(#12030)](https://github.com/k3s-io/k3s/pull/12030)
+* Improve readiness polling on node startup [(#12037)](https://github.com/k3s-io/k3s/pull/12037)
+* Fix issue caused by default authorization-mode apiserver arg [(#12044)](https://github.com/k3s-io/k3s/pull/12044)
+* Cleanup anonymous and named volumes for docker tests (#12069) [(#12076)](https://github.com/k3s-io/k3s/pull/12076)
+* Add support for secretbox encryption provider with the `k3s secrets-encrypt` command [(#12066)](https://github.com/k3s-io/k3s/pull/12066)
+  * Users can now configure secrets encryption to use `secretbox` provider by setting the `secrets-encryption-provider` flag.
+* Add error in certificate check [(#12097)](https://github.com/k3s-io/k3s/pull/12097)
+* Backports for 2025-04 [(#12105)](https://github.com/k3s-io/k3s/pull/12105)
+* Bump kine for nats-server/v2 CVE-2025-30215 [(#12142)](https://github.com/k3s-io/k3s/pull/12142)
+* Drone Test Split and Reduction [(#12150)](https://github.com/k3s-io/k3s/pull/12150)
+* More backports for 2025-04 [(#12168)](https://github.com/k3s-io/k3s/pull/12168)
+* Fix handler panic when bootstrapper returns empty peer list [(#12179)](https://github.com/k3s-io/k3s/pull/12179)
+* Bump traefik to v2.11.24 [(#12190)](https://github.com/k3s-io/k3s/pull/12190)
+* Update to v1.31.8-k3s1 and Go 1.23.6 [(#12207)](https://github.com/k3s-io/k3s/pull/12207)
+
+-----
 ## Release [v1.31.7+k3s1](https://github.com/k3s-io/k3s/releases/tag/v1.31.7+k3s1)
 <!-- v1.31.7+k3s1 -->
 
