--- a/docs/release-notes/v1.32.X.md
+++ b/docs/release-notes/v1.32.X.md
@@ -11,6 +11,7 @@ Before upgrading from earlier releases, be sure to read the Kubernetes [Urgent U
 
 | Version | Release date | Kubernetes | Kine | SQLite | Etcd | Containerd | Runc | Flannel | Metrics-server | Traefik | CoreDNS | Helm-controller | Local-path-provisioner  |
 | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | -----  |
+| [v1.32.4+k3s1](v1.32.X.md#release-v1324k3s1) | May 01 2025| [v1.32.4](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.32.md#v1324) | [v0.13.14](https://github.com/k3s-io/kine/releases/tag/v0.13.14) | [3.46.1](https://sqlite.org/releaselog/3_46_1.html) | [v3.5.21-k3s1](https://github.com/k3s-io/etcd/releases/tag/v3.5.21-k3s1) | [v2.0.4-k3s2](https://github.com/k3s-io/containerd/releases/tag/v2.0.4-k3s2) | [v1.2.5](https://github.com/opencontainers/runc/releases/tag/v1.2.5) | [v0.26.7](https://github.com/flannel-io/flannel/releases/tag/v0.26.7) | [v0.7.2](https://github.com/kubernetes-sigs/metrics-server/releases/tag/v0.7.2) | [v3.3.6](https://github.com/traefik/traefik/releases/tag/v3.3.6) | [v1.12.1](https://github.com/coredns/coredns/releases/tag/v1.12.1) | [v0.16.10](https://github.com/k3s-io/helm-controller/releases/tag/v0.16.10) | [v0.0.31](https://github.com/rancher/local-path-provisioner/releases/tag/v0.0.31)  |
 | [v1.32.3+k3s1](v1.32.X.md#release-v1323k3s1) | Mar 25 2025| [v1.32.3](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.32.md#v1323) | [v0.13.9](https://github.com/k3s-io/kine/releases/tag/v0.13.9) | [3.46.1](https://sqlite.org/releaselog/3_46_1.html) | [v3.5.19-k3s1](https://github.com/k3s-io/etcd/releases/tag/v3.5.19-k3s1) | [v2.0.4-k3s2](https://github.com/k3s-io/containerd/releases/tag/v2.0.4-k3s2) | [v1.2.5](https://github.com/opencontainers/runc/releases/tag/v1.2.5) | [v0.25.7](https://github.com/flannel-io/flannel/releases/tag/v0.25.7) | [v0.7.2](https://github.com/kubernetes-sigs/metrics-server/releases/tag/v0.7.2) | [v3.3.2](https://github.com/traefik/traefik/releases/tag/v3.3.2) | [v1.12.0](https://github.com/coredns/coredns/releases/tag/v1.12.0) | [v0.16.6](https://github.com/k3s-io/helm-controller/releases/tag/v0.16.6) | [v0.0.31](https://github.com/rancher/local-path-provisioner/releases/tag/v0.0.31)  |
 | [v1.32.2+k3s1](v1.32.X.md#release-v1322k3s1) | Feb 27 2025| [v1.32.2](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.32.md#v1322) | [v0.13.9](https://github.com/k3s-io/kine/releases/tag/v0.13.9) | [3.46.1](https://sqlite.org/releaselog/3_46_1.html) | [v3.5.18-k3s1](https://github.com/k3s-io/etcd/releases/tag/v3.5.18-k3s1) | [v2.0.2-k3s2](https://github.com/k3s-io/containerd/releases/tag/v2.0.2-k3s2) | [v1.2.4-k3s1](https://github.com/opencontainers/runc/releases/tag/v1.2.4-k3s1) | [v0.25.7](https://github.com/flannel-io/flannel/releases/tag/v0.25.7) | [v0.7.2](https://github.com/kubernetes-sigs/metrics-server/releases/tag/v0.7.2) | [v3.3.2](https://github.com/traefik/traefik/releases/tag/v3.3.2) | [v1.12.0](https://github.com/coredns/coredns/releases/tag/v1.12.0) | [v0.16.6](https://github.com/k3s-io/helm-controller/releases/tag/v0.16.6) | [v0.0.31](https://github.com/rancher/local-path-provisioner/releases/tag/v0.0.31)  |
 | [v1.32.1+k3s1](v1.32.X.md#release-v1321k3s1) | Jan 28 2025| [v1.32.1](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.32.md#v1321) | [v0.13.5](https://github.com/k3s-io/kine/releases/tag/v0.13.5) | [3.46.1](https://sqlite.org/releaselog/3_46_1.html) | [v3.5.16-k3s1](https://github.com/k3s-io/etcd/releases/tag/v3.5.16-k3s1) | [v1.7.23-k3s2](https://github.com/k3s-io/containerd/releases/tag/v1.7.23-k3s2) | [v1.2.4-k3s1](https://github.com/opencontainers/runc/releases/tag/v1.2.4-k3s1) | [v0.25.7](https://github.com/flannel-io/flannel/releases/tag/v0.25.7) | [v0.7.2](https://github.com/kubernetes-sigs/metrics-server/releases/tag/v0.7.2) | [v2.11.18](https://github.com/traefik/traefik/releases/tag/v2.11.18) | [v1.12.0](https://github.com/coredns/coredns/releases/tag/v1.12.0) | [v0.16.5](https://github.com/k3s-io/helm-controller/releases/tag/v0.16.5) | [v0.0.30](https://github.com/rancher/local-path-provisioner/releases/tag/v0.0.30)  |
@@ -18,6 +19,32 @@ Before upgrading from earlier releases, be sure to read the Kubernetes [Urgent U
 
 <br />
 
+## Release [v1.32.4+k3s1](https://github.com/k3s-io/k3s/releases/tag/v1.32.4+k3s1)
+<!-- v1.32.4+k3s1 -->
+
+This release updates Kubernetes to v1.32.4, and fixes a number of issues.
+
+For more details on what's new, see the [Kubernetes release notes](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.32.md#changelog-since-v1323).
+
+### Changes since v1.32.3+k3s1:
+
+* Migrate to UrfaveCLI v2 [(#12031)](https://github.com/k3s-io/k3s/pull/12031)
+* Improve readiness polling on node startup [(#12038)](https://github.com/k3s-io/k3s/pull/12038)
+* Fix issue caused by default authorization-mode apiserver arg [(#12042)](https://github.com/k3s-io/k3s/pull/12042)
+* Fix flakey etcd startup tests [(#12050)](https://github.com/k3s-io/k3s/pull/12050)
+* Cleanup anonymous and named volumes for docker tests [(#12079)](https://github.com/k3s-io/k3s/pull/12079)
+* Add support for secretbox encryption provider with the `k3s secrets-encrypt` command [(#12067)](https://github.com/k3s-io/k3s/pull/12067)
+  * Users can now configure secrets encryption to use `secretbox` provider by setting the `secrets-encryption-provider` flag.
+* Add error in certificate check [(#12098)](https://github.com/k3s-io/k3s/pull/12098)
+* Backports for 2025-04 [(#12104)](https://github.com/k3s-io/k3s/pull/12104)
+* Bump kine for nats-server/v2 CVE-2025-30215 [(#12141)](https://github.com/k3s-io/k3s/pull/12141)
+* Drone Test Split and Reduction [(#12151)](https://github.com/k3s-io/k3s/pull/12151)
+* More backports for 2025-04 [(#12167)](https://github.com/k3s-io/k3s/pull/12167)
+* Fix handler panic when bootstrapper returns empty peer list [(#12178)](https://github.com/k3s-io/k3s/pull/12178)
+* Bump traefik to v3.3.6 [(#12189)](https://github.com/k3s-io/k3s/pull/12189)
+* Update to v1.32.4-k3s1 and Go 1.23.6 [(#12209)](https://github.com/k3s-io/k3s/pull/12209)
+
+-----
 ## Release [v1.32.3+k3s1](https://github.com/k3s-io/k3s/releases/tag/v1.32.3+k3s1)
 <!-- v1.32.3+k3s1 -->
 
