--- a/blog/2025-08-30-K3s-1.34-release.md
+++ b/blog/2025-08-30-K3s-1.34-release.md
@@ -8,6 +8,8 @@ Kubernetes 1.34 is finally here! A look back at K3s recent work and achievements
 
 It's been a busy and productive few months, and we're excited to share some of the amazing progress we've made. From new features that make your lives easier to important bug fixes and foundational improvements, our team and community have been hard at work.
 
+<!-- truncate -->
+
 ## Key Features and Improvements ✨
 Here’s a look at some of the most impactful features and updates we've rolled out:
 
